# Sunray_Refactor_Aggressive

./: .clangd  .clangd-format  .gitignore  build.sh  hagindex.yml  how_to_use_control.md
common/sunray_common/: CMakeLists.txt  package.xml
common/sunray_common/include/: geometry_eigen_conversions.h  quad_state_estimate.h
common/sunray_common/include/sunray_common/: geometry_eigen_conversions.h  quad_state_estimate.h
common/sunray_common/src/: geometry_eigen_conversions.cpp  quad_state_estimate.cpp
common/sunray_common/test/: sunray_common_ros_compile_test_node.cpp  test_geometry_eigen_conversions.cpp  test_quad_state_estimate.cpp
common/sunray_log/sunray_log_example/: CMakeLists.txt  package.xml
common/sunray_log/sunray_log_example/include/sunray_log_example/: localization_example.hpp
common/sunray_log/sunray_log_example/src/: localization_example.cpp  main.cpp
common/sunray_msg/: CMakeLists.txt  package.xml
common/sunray_msg/msg/: UAVControlCMD.msg  UAVState.msg
common/sunray_msgs/: CMakeLists.txt  package.xml
common/sunray_msgs/msg/: PX4State.msg
common/sunray_srvs/: CMakeLists.txt  package.xml
common/sunray_srvs/srv/: Return.srv  Takeoff.srv
control/sunray_uav_control/: CMakeLists.txt  package.xml  readme.md
control/sunray_uav_control/config/: sunray_control_config.yaml
control/sunray_uav_control/include/control_data_types/: control_data_types.h  controller_desired_types.hpp  mavros_helper_data_types.hpp
control/sunray_uav_control/include/control_msg_types/: trajectory_point.hpp
control/sunray_uav_control/include/controller/base_controller/: base_controller.hpp
control/sunray_uav_control/include/controller_data_types/: controller_data_types.hpp  controller_debug_fields.hpp  controller_debug_types.hpp  controller_debug_utils.hpp  controller_desired_types.hpp  controller_output_types.hpp
control/sunray_uav_control/include/mavros_helper/: mavros_helper.hpp
control/sunray_uav_control/include/statemachine/: sunray_config_types.hpp  sunray_fsm.hpp  sunray_state_types.hpp
control/sunray_uav_control/include/sunray_helper/: readme.md  sunray_helper.h  sunray_robot_group.h
control/sunray_uav_control/include/sunray_statemachine/: sunray_statemachine.h  sunray_statemachine_datatypes.h
control/sunray_uav_control/include/system_check/: sunray_system_check.hpp
control/sunray_uav_control/include/trajectory_buffer/: trajectory_buffer.h
control/sunray_uav_control/launch/: mavros_helper_print.launch  rc_offboard_exit_guard.launch  sunray_attitude_smoke_demo.launch  sunray_fsm.launch  sunray_helper_demo.launch
control/sunray_uav_control/msg/: AttitudeCmdEnvelope.msg  ComplexCmdEnvelope.msg  ControlMeta.msg  Trajectory.msg  TrajectoryEnvelope.msg  TrajectoryPoint.msg  VelocityCmdEnvelope.msg
control/sunray_uav_control/scripts/: gazebo_model_states_to_odom.py  mock_rc_in.py
control/sunray_uav_control/src/control_data_types/: control_data_types.cpp
control/sunray_uav_control/src/demo/: rc_offboard_exit_guard_node.cpp  sunray_attitude_smoke_demo_node.cpp  sunray_demo_utils.hpp  sunray_fsm_node.cpp  sunray_helper_circle_return_demo_node.cpp  sunray_helper_demo_node.cpp  sunray_helper_hover_land_demo_node.cpp  sunray_helper_pentagram_demo_node.cpp  sunray_helper_square_demo_node.cpp  sunray_robot_group_circle_return_demo_node.cpp  sunray_robot_group_demo_node.cpp  sunray_robot_group_hover_land_demo_node.cpp  sunray_robot_group_pentagram_demo_node.cpp  sunray_robot_group_square_demo_node.cpp
control/sunray_uav_control/src/mavros_helper/: mavros_helper.cpp  mavros_helper_print_node.cpp
control/sunray_uav_control/src/sunray_control_arbiter/: sunray_control_arbiter.cpp
control/sunray_uav_control/src/sunray_helper/: sunray_helper.cpp
control/sunray_uav_control/src/sunray_statemachine/: sunray_statemachine.cpp  sunray_statemachine_callbacks.cpp
control/sunray_uav_control/srv/: Land.srv  ReturnHome.srv
control/sunray_uav_control/test/: controller_output_types_compile_test.cpp  mavros_helper_ros_test.cpp  mavros_helper_ros_test.test
drivers/sunray_gimbal/: CMakeLists.txt  package.xml
drivers/sunray_gimbal/demo/: gimbal_qrtracker.cpp  rtsp_image_publisher.cpp
drivers/sunray_gimbal/launch/: gimbal_core.launch  rtsp_image_publisher.launch
drivers/sunray_gimbal/src/: gimbal_control.py  image_publish.cpp
drivers/sunray_mavros/: CMakeLists.txt  package.xml
drivers/sunray_mavros/config/: px4_config.yaml  px4_pluginlists.yaml
drivers/sunray_mavros/launch/: mavros.launch
drivers/sunray_vrpn/: CMakeLists.txt  package.xml
drivers/sunray_vrpn/launch/: vrpn.launch
interface/sunray_helper/: CMakeLists.txt  README.md  package.xml
interface/sunray_helper/config/: sunray_helper_config.yaml
interface/sunray_helper/examples/: goto_waypoint.cpp  minimal_takeoff.cpp
interface/sunray_helper/include/sunray_helper/: helper_config.hpp  position_point.hpp  sunray_helper.h
interface/sunray_helper/src/: state_reader.cpp  sunray_helper.cpp
interface/sunray_helper/test/: sunray_helper_compile_test.cpp
localization/ekf_odometry/: CMakeLists.txt  README.md  package.xml
localization/ekf_odometry/include/: ekf_filter.hpp  imu_process.hpp
localization/ekf_odometry/launch/: ekf_odometry.launch
localization/ekf_odometry/src/: ekf_filter.cpp  ekf_odometry_node.cpp  imu_process.cpp
localization/sunray_mocap/: CMakeLists.txt  package.xml
localization/sunray_mocap/launch/: mocap_odom.launch
localization/sunray_mocap/src/: mocap_odom_node.cpp
localization/sunray_viobot/: CMakeLists.txt  package.xml
localization/sunray_viobot/launch/: viobot_odom.launch
localization/sunray_viobot/src/: viobot_odom_node.cpp
tools/build_scripts/tui/: CMakeLists.txt  check_dependencies.sh
tools/build_scripts/tui/include/: input_cleaner.hpp  input_cleanup_config.hpp  tui_config.hpp  tui_core.hpp  tui_interaction.hpp  tui_logic.hpp  tui_render.hpp  tui_reset.hpp  tui_screen.hpp  tui_terminal.hpp  tui_types.hpp
tools/build_scripts/tui/src/: tui_config.cpp  tui_core.cpp  tui_interaction.cpp  tui_logic.cpp  tui_main.cpp  tui_screen.cpp  tui_terminal.cpp
(+60 files in other folders)
