<?xml version="1.0"?>
<package format="2">
  <name>sunray_msgs</name>
  <version>0.1.0</version>
  <description>Sunray message definitions.</description>

  <maintainer email="sirui@yundrone.com">YunDrone Tech</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
