<?xml version="1.0"?>
<package format="2">
  <name>sunray_uav_control</name>
  <version>0.0.0</version>
  <description>Sunray UAV controller interfaces and configuration.</description>

  <maintainer email="taolin@todo.todo">taolin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen</depend>
  <test_depend>gtest</test_depend>

  <export>
  </export>
</package>
