<?xml version="1.0"?>
<package format="2">
  <name>sunray_mavros</name>
  <version>0.0.0</version>
  <description>The sunray mavros package</description>

  <maintainer email="maintainer@example.com">Sunray</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
