<?xml version="1.0"?>
<package format="2">
  <name>sunray_helper</name>
  <version>0.1.0</version>
  <description>High-level helper facade for the Sunray UAV system.</description>

  <maintainer email="sirui@yundrone.com">YunDrone Tech</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sunray_common</depend>
</package>
