<?xml version="1.0"?>
<package format="2">
  <name>ekf_odometry</name>
  <version>1.0.0</version>
  <description>IMU pre-integration and EKF-based odometry fusion node</description>
  
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>eigen_conversions</depend>

  <export>
  </export>
</package>
