<?xml version="1.0"?>
<package format="2">
  <name>sunray_mocap</name> 
  <version>0.1.0</version>
  <description> The sunray mocap package </description>

  <maintainer email="maintainer@example.com">Sunray</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>

  <export></export>
</package>
