<?xml version="1.0"?>
<package format="2">
  <name>sunray_viobot</name>
  <version>0.1.0</version>
  <description> The sunray viobot package</description>

  <maintainer email="maintainer@example.com">Sunray</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>

  <export></export>
</package>
